--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+title: "Open Klave"
+author: "Open Klave"
+description: "Copyright 2021 The Open Klave Projet"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
