--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Open Klave"
 author: "Open Klave"
-description: "Copyright 2021 The Open Klave Projet"
+description: "Copyright 2021 The Open Klave Project"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
